Update try-convert target to honor version
This change honors the version of try-convert for the dev loop as well
as only downloading it once for whichever projects may need it.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
   <Import Project="Sdk.targets" Sdk="Microsoft.DotNet.Arcade.Sdk" />
 
-  <Import Project="$(MSBuildThisFileDirectory)/ToolsInstaller.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)/TryConvertInstaller.targets" />
 
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers">
