--- a/.gitignore
+++ b/.gitignore
@@ -95,5 +95,4 @@ launchSettings.json
 /.dotnet
 
 # Bundled dotnet tools
-/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/tools
-/tests/tool/Integration.Tests/tools/
+.tools/
