--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -9,7 +9,7 @@
     <Description>A tool to assist developers in upgrading .NET Framework applications to .NET 5.</Description>
     <PackageId>upgrade-assistant</PackageId>
     <PackageIcon>icon.png</PackageIcon>
-    <InstallTools>true</InstallTools>
+    <InstallTryConvert>true</InstallTryConvert>
     <ExcludeMSBuildRuntime>true</ExcludeMSBuildRuntime>
   </PropertyGroup>
   <ItemGroup>
