This change extracts the component identification out of the project implementation and adds tests

--- a/tests/components/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests.csproj
+++ b/tests/components/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
+    <PackageReference Include="AutoFixture" />
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
