--- a/tests/components/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests.csproj
+++ b/tests/components/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests/Microsoft.DotNet.UpgradeAssistant.MSBuild.Tests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <ExcludeMSBuildRuntime>true</ExcludeMSBuildRuntime>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" />
