--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ launchSettings.json
 # Bundled dotnet tools
 /src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/tools
 /tests/tool/Integration.Tests/tools/
+/.tools/try-convert/*
