--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Templates/CSharpWebAppTemplates/WebAppTemplates.json
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Templates/CSharpWebAppTemplates/WebAppTemplates.json
@@ -30,6 +30,9 @@
       "Keywords": []
     }
   ],
+  "TemplateOutputType": [
+    "Exe"
+  ],
   "TemplateLanguage": "CSharp",
   "TemplateAppliesTo": [
     "AspNetCore"
