Update appsettings.json to match renamed template config file name

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -11,7 +11,7 @@
   },
   "TemplateInserter": {
     "TemplateConfigFiles": [
-      "Templates\\CSharpWebAppTemplates\\TemplateConfig.json"
+      "Templates\\CSharpWebAppTemplates\\WebAppTemplates.json"
     ]
   },
   "TFMSelector": {
