--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -74,6 +74,12 @@ stages:
         steps:
         - checkout: self
           clean: true
+        - task: UseDotNet@2
+          displayName: 'Use .NET Core sdk'
+          inputs:
+            packageType: sdk
+            version: 5.0.103
+            installationPath: $(Agent.ToolsDirectory)/dotnet
         - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
           - task: PowerShell@2
             displayName: Setup Private Feeds Credentials
