--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -89,6 +89,8 @@ stages:
               arguments: -ConfigFile $(Build.SourcesDirectory)/NuGet.config -Password $Env:Token
             env:
               Token: $(dn-bot-dnceng-artifact-feeds-rw)
+        - script: dotnet --list-sdks
+          displayName: List SDKs
         - script: eng\common\cibuild.cmd
             -configuration $(_BuildConfig) 
             -prepareMachine
