--- a/src/components/Microsoft.DotNet.UpgradeAssistant/Microsoft.DotNet.UpgradeAssistant.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant/Microsoft.DotNet.UpgradeAssistant.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
