--- a/.editorconfig
+++ b/.editorconfig
@@ -258,6 +258,9 @@ dotnet_diagnostic.SA1502.severity = none
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = none
 
+# CA1600: Elements should be documented
+dotnet_diagnostic.CA1600.severity = none
+
 # CA1601: Partial elements should be documented
 dotnet_diagnostic.CA1601.severity = none
 
