--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -8,6 +8,7 @@
     <ToolCommandName>upgrade-assistant</ToolCommandName>
     <Description>A tool to assist developers in upgrading .NET Framework applications to .NET 5.</Description>
     <PackageId>upgrade-assistant</PackageId>
+    <PackageReleaseNotes>A changelog is available at https://github.com/dotnet/upgrade-assistant/blob/main/CHANGELOG.md.</PackageReleaseNotes>
     <PackageIcon>icon.png</PackageIcon>
     <InstallTryConvert>true</InstallTryConvert>
     <ExcludeMSBuildRuntime>true</ExcludeMSBuildRuntime>
