--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,8 @@
     <PackageVersion Include="Autofac.Extras.Moq" Version="6.0.0" />
     <PackageVersion Include="AutoFixture" Version="4.15.0" />
     <PackageVersion Include="coverlet.collector" Version="3.0.2" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="5.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Razor.Language" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Build" Version="16.8.0" />
     <PackageVersion Include="Microsoft.Build.Framework" Version="16.8.0" />
     <PackageVersion Include="Microsoft.Build.Locator" Version="1.4.1" />
@@ -13,6 +15,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Features" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.9.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Razor" Version="5.0.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.Features" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
