--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
@@ -10,6 +10,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Templates\VisualBasicWebAppTemplates\Program.vb" />
+    <None Remove="Templates\VisualBasicWebAppTemplates\Startup.vb" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\extensions\Microsoft.DotNet.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
