added vb templates

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -11,7 +11,8 @@
   },
   "TemplateInserter": {
     "TemplateConfigFiles": [
-      "Templates\\CSharpWebAppTemplates\\WebAppTemplates.json"
+      "Templates\\CSharpWebAppTemplates\\WebAppTemplates.json",
+      "Templates\\VisualBasicWebAppTemplates\\WebAppTemplates.json"
     ]
   },
   "TFMSelector": {
