--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -21,6 +21,7 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="5.0.0" />
