--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Solution/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Solution/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj
@@ -1,8 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" />
+  </ItemGroup>
+
 </Project>
