--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,6 +2,7 @@
 <Project>
   <ItemGroup>
     <PackageVersion Include="Automapper" Version="10.1.1" />
+    <PackageVersion Include="Autofac" Version="6.1.0" />
     <PackageVersion Include="Autofac.Extras.Moq" Version="6.0.0" />
     <PackageVersion Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageVersion Include="AutoFixture" Version="4.15.0" />
