Replace ITargetTFMSelector with a filter-based pattern
This change doesn't change too much for callers, but changes how a TFM is selected. Previously, one class held all the knowledge about how to select a TFM for a project. This swaps that out for a filter chain that can attempt to change the final result. Each of the filters can do whatever checks they may want, but the ITargetFrameworkSelectorFilter.Builder that is passed through will only update the TFM if it is a higher or more constrained TFM.

--- a/tests/components/Microsoft.DotNet.UpgradeAssistant.Tests/Microsoft.DotNet.UpgradeAssistant.Tests.csproj
+++ b/tests/components/Microsoft.DotNet.UpgradeAssistant.Tests/Microsoft.DotNet.UpgradeAssistant.Tests.csproj
@@ -5,6 +5,9 @@
     <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="TargetFrameworkSelectorTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
