--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
@@ -4,14 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Templates\**\*.cs" />
+    <Compile Remove="Templates\**\*.vb" />
     <None Remove="Templates\**\*.json" />
     <Content Include="Templates\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="Templates\VisualBasicWebAppTemplates\Program.vb" />
-    <None Remove="Templates\VisualBasicWebAppTemplates\Startup.vb" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
