--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -5,6 +5,7 @@
   -->
   <ItemGroup>
     <FileSignInfo Include="Autofac.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Autofac.Extensions.DependencyInjection.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="AutoMapper.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Newtonsoft.Json.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Serilog.dll" CertificateName="3PartySHA2" />
