--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Microsoft.DotNet.UpgradeAssistant.Steps.Templates.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Templates\**\*.cs" />
-    <Compile Remove="Templates\**\*.vb" />
+    <None Remove="Templates\**\*.vb" />
     <None Remove="Templates\**\*.json" />
     <Content Include="Templates\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
