--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
     <PackageVersion Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageVersion Include="AutoFixture" Version="4.15.0" />
     <PackageVersion Include="coverlet.collector" Version="3.0.2" />
+    <PackageVersion Include="DiffPlex" Version="1.6.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="5.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Razor.Language" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Build" Version="16.8.0" />
