--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -7,6 +7,7 @@
     <FileSignInfo Include="Autofac.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Autofac.Extensions.DependencyInjection.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="AutoMapper.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="DiffPlex.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Newtonsoft.Json.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Serilog.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Serilog.Extensions.Hosting.dll" CertificateName="3PartySHA2" />
