Enable LTS/Current/Preview selection
This change does a couple of things to enable LTS/Current/Preview selection:

- Adds a command line argument to allow selection
- Maps the selected support model to identify the TFM that is needed
- Updates the PackageLoader to limit searches to results that match the TFMs in a project

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -15,9 +15,10 @@
       "Templates\\VisualBasicWebAppTemplates\\WebAppTemplates.json"
     ]
   },
-  "TFMSelector": {
-    "CurrentTFMBase": "net5.0",
-    "LTSTFMBase": "net5.0"
+  "DefaultTargetFrameworks": {
+    "Current": "net5.0",
+    "LTS": "netcoreapp3.1",
+    "Preview": "net6.0"
   },
   "TryConvertProjectConverter": {
     "TryConvertPath": "./tools/try-convert.exe"
