--- a/src/components/Microsoft.DotNet.UpgradeAssistant/Microsoft.DotNet.UpgradeAssistant.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant/Microsoft.DotNet.UpgradeAssistant.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
