--- a/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.vbproj
+++ b/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.vbproj
@@ -11,9 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="*\*.Fixed.cs" />
+    <Compile Remove="*\UA*.vb" />
+    <Compile Include="*\UA*.Fixed.vb" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\..\src\Analyzers\AspNetUpgrader.Analyzers\AspNetUpgrader.Analyzers.csproj" />
   </ItemGroup>
