--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,10 +24,12 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="5.0.0" />
