Make IdentifierUpgradeCodeFixer language agnostic

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,7 +20,9 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Features" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Razor" Version="5.0.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.Features" Version="3.9.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
